--- a/src/LBF/MainBundle/Resources/views/Main/indexMain.html.twig
+++ b/src/LBF/MainBundle/Resources/views/Main/indexMain.html.twig
@@ -235,7 +235,7 @@
 				<div class="presentation_texte row">
 		        	<div class="row center">
 		        		<div class="col-lg-2 col-md-2 col-sm-2 hidden-xs" data-menuanchor="ourRecipes">
-		        			<a href="#ourRecipes" class="btn btn-login">
+		        			<a href="#ourRecipes" class="btn btn-login" id="btn_section3">
 								<img src="{{ asset('img/system/defaults/down_arrow.png') }}" alt="" class="btn_right_arrow"/>
 								{{ 'ourProducts.titles.recipes' | trans }}
 							</a>
@@ -901,7 +901,7 @@
 							</h2>
 		        		</div>
 						<div class="col-lg-2 col-md-2 col-xs-12">
-							<a href="#footerSection" class="btn btn-login">
+							<a href="#footerSection" class="btn btn-login" id="btn_section4">
 								{{ 'aboutUs.titles.contact' | trans }}
 								<img src="{{ asset('img/system/defaults/right_arrow.png') }}" alt="" class="btn_right_arrow"/>
 							</a>
