--- a/src/LBF/UserBundle/Resources/views/layout.html.twig
+++ b/src/LBF/UserBundle/Resources/views/layout.html.twig
@@ -18,7 +18,7 @@
     <!-- BEGIN CONTENT -->
     <div id="fullpage" class="login_background">
 
-      <div class="section" id="section4">
+      <div class="section section_padding" id="section4">
 
         <div id="sectionContentAjax">
           <div id="login_section">
