--- a/app/Resources/views/includes/footer.html.twig
+++ b/app/Resources/views/includes/footer.html.twig
@@ -91,7 +91,7 @@
 		</div>
 		<div class="hidden-lg hidden-md hidden-sm col-xs-12 sep_presentation_footer"></div>
 		<div class="col-lg-4 col-md-4 col-sm-4 col-sm-12">
-	 		<a href="/temoignages">
+	 		<a href="#">
 		 	<h4>
 		 		{{ 'footer.titles.witnesses' | trans }}
 		 	</h4>
@@ -108,7 +108,7 @@
 		 	</h4>
 		 	{{ 'footer.content.clientService' | trans }}
 		 	<br/>
-		 	<a href="tel:">
+		 	<a href="">
 		 		+51 4 50 30 40 30
 		 	</a>
 		 	<div class="center">
@@ -125,17 +125,17 @@
 				</h4>
 				<ul class="list_no_style_li">
 					<li>
-						<a href="/contact">
+						<a href="">
 							{{ 'footer.content.contact' | trans }}
 						</a>
 					</li>
 					<li>
-						<a href="/remerciements">
+						<a href="">
 							{{ 'footer.content.thanks' | trans }}
 						</a>
 					</li>
 					<li>
-						<a href="/mentions-legales">
+						<a href="">
 							{{ 'footer.content.legalMentions' | trans }}
 						</a>
 					</li>
@@ -148,22 +148,22 @@
 				</h4>
 				<ul class="list_no_style_li">
 					<li>
-						<a href="/">
+						<a href="">
 							{{ 'footer.content.moreInfo' | trans }}
 						</a>
 					</li>
 					<li>
-						<a href="/">
+						<a href="">
 							{{ 'footer.content.delivery' | trans }}
 						</a>
 					</li>
 					<li>
-						<a href="/">
+						<a href="">
 							{{ 'footer.content.ourWork' | trans }}
 						</a>
 					</li>
 					<li>
-						<a href="/">
+						<a href="">
 							{{ 'footer.content.questions' | trans }}
 						</a>
 					</li> 	
@@ -176,19 +176,19 @@
 			  	</h4>
 			  	<ul class="list_no_style_li">
 					<li>
-						<a href="/">Saucissons</a>
+						<a href="">Saucissons</a>
 					</li>
 					<li>
-						<a href="/">Patés</a>
+						<a href="">Patés</a>
 					</li>
 					<li>
-						<a href="/">Chorizo</a>
+						<a href="">Chorizo</a>
 					</li>
 					<li>
-						<a href="/">Merguez</a>
+						<a href="">Merguez</a>
 					</li>
 					<li>
-						<a href="/">Chippolata</a>
+						<a href="">Chippolata</a>
 					</li>
 				</ul>
 			</div>
