--- a/app/Resources/views/index_base.html.twig
+++ b/app/Resources/views/index_base.html.twig
@@ -14,8 +14,7 @@
       {% endblock %}
     </title>
 
-    <link rel="icon" type="image/png" href="{{ asset('img/favicon.png') }}" />
-    <link rel="icon" type="image/ico" href="{{ asset('favicon.ico') }}" />
+    <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
