--- a/web/css/main_style.css
+++ b/web/css/main_style.css
@@ -1290,6 +1290,13 @@ body.modal-open {
 	margin-bottom: 0px;
 	margin-top: 10px;	
 }
+.product_img_admin {
+	border-radius: 50%;
+	border: 1px solid rgba(41,41,41,0.5);
+	width: 50px;
+	height: 50px;
+	margin: 0;
+}
 
 .recipe_img, .recipe_img_lg {
 	border-radius: 0%;
@@ -1841,9 +1848,6 @@ body.modal-open {
 	border : 1px solid rgba(41,41,41,0.95);
 }
 
-.user_tabs {
-	width: 100%;
-}
 .nav_tabs_user {
 	width: 100%;
 	margin: 0;
@@ -1899,7 +1903,7 @@ body.modal-open {
 
 #user_panel {
 	padding: 10px;
-	border: 1px dotted rgba(250,250,250,0.2);
+	border: 1px dotted rgba(41,41,41,0.5);
 	max-height: 600px;
 	overflow-y: scroll !important;
 }
@@ -1951,6 +1955,20 @@ body.modal-open {
 	border-bottom: 1px dotted rgba(41,41,41,0.5);
 }
 
+.nav_tabs_admin .active .btn-choice .inner_arrow{
+	opacity: 1;
+}
+.nav_tabs_admin li:hover, .nav_tabs_admin .active {
+	background-color: transparent !important;
+	border-bottom: 1px solid rgba(41,41,41,0.95)
+}
+.nav_tabs_admin li a:hover {
+	background-color: transparent !important;
+}
+
+.nav_tabs_admin li.logout-btn:hover {
+	background-color: rgba(196,1,1,0.5) !important;
+}
 
 
 /* ------------------------------------------------------ Footer ------------------------------------------------------ */
