--- a/app/Resources/views/index_base.html.twig
+++ b/app/Resources/views/index_base.html.twig
@@ -59,13 +59,17 @@
           {% include 'includes/header.html.twig' %}
         <!-- END header -->
 
-        <!-- BEGIN header -->
+        <!-- BEGIN modals -->
           {% include 'includes/modals.html.twig' %}
-        <!-- END header -->
+        <!-- END modals -->
 
-        <!-- BEGIN header -->
+        <!-- BEGIN button to top -->
           {% include 'includes/button_to_top.html.twig' %}
-        <!-- END header -->
+        <!-- END button to top -->
+
+        <!-- BEGIN button to top -->
+          {% include 'includes/button_on_side.html.twig' %}
+        <!-- END button to top -->
         
         <!-- BEGIN CONTAINER -->
         <div id="page_container_gen" class="
