--- a/app/Resources/views/includes/nav_admin.html.twig
+++ b/app/Resources/views/includes/nav_admin.html.twig
@@ -1,69 +1,78 @@
 <!-- Navigation pour l'administrateur -->
 
 {% set route = app.request.attributes.get( '_route' ) %}
-<div class="nav_admin">
-	<ul class="nav_admin_ul">
-		<li class="nav_admin_li">
-			<a href="{{ path('lvnp_admin_homepage') }}" class="no_style_a">
-				<button class="li-admin
-					{% if route == 'lvnp_admin_homepage' %}
-						li-admin-active
-					{% endif %}
-					"> 
-					ACCUEIL
-	            </button>
+
+<div class="row">
+	<div class="col-md-4"></div>
+
+	<div class="col-md-4">
+		<h2 class="center">
+			Administration du site
+		</h2>
+	</div>
+
+	<div class="col-md-4"></div>
+</div>
+
+<div class="row">
+	<ul class="nav-justified nav_tabs_admin">
+		<li class="{% if route == 'lbf_admin_currentOrders' %} active {% endif %}">
+			<a href="{{ path('lbf_admin_currentOrders') }}" class="btn btn-choice">
+				Commandes en cours
+				<div class="float-right inner_arrow">
+					<img src="{{ asset('img/system/defaults/currentOrders.png') }}" alt="" class="btn_right_arrow"/>
+				</div>
 			</a>
 		</li>
-		<li class="nav_admin_li">
-			<a href="{{ path('lvnp_admin_locations') }}" class="no_style_a">
-				<button class="li-admin
-					{% if route == 'lvnp_admin_locations' 
-						or route == 'lvnp_admin_location_new'
-						or route == 'lvnp_admin_location_edit' %}
-						li-admin-active
-					{% endif %}
-					"> 
-					LOCATION
-	            </button>
+		<li class="{% if route == 'lbf_admin_pastOrders' %} active {% endif %}">
+			<a href="{{ path('lbf_admin_pastOrders') }}" class="btn btn-choice">
+				Commandes passées
+				<div class="float-right inner_arrow">
+					<img src="{{ asset('img/system/defaults/pastOrders.png') }}" alt="" class="btn_right_arrow"/>
+				</div>
 			</a>
 		</li>
-		<li class="nav_admin_li">
-			<a href="{{ path('lvnp_admin_ventes') }}" class="no_style_a">
-				<button class="li-admin
-					{% if route == 'lvnp_admin_ventes'
-						or route == 'lvnp_admin_vente_new'
-						or route == 'lvnp_admin_vente_edit' %}
-						li-admin-active
-					{% endif %}
-					">
-					VENTE
-	            </button>
+		<li class="{% if route == 'lbf_admin_users' %} active {% endif %}">
+			<a href="{{ path('lbf_admin_users') }}" class="btn btn-choice">
+				Utilisateurs
+				<div class="float-right inner_arrow">
+					<img src="{{ asset('img/system/defaults/users.png') }}" alt="" class="btn_right_arrow"/>
+				</div>
 			</a>
 		</li>
-		<li class="nav_admin_li">
-			<a href="{{ path('lvnp_admin_textes') }}" class="no_style_a">
-				<button class="li-admin
-					{% if route == 'lvnp_admin_textes' 
-						or route == 'lvnp_admin_text_choice'
-						or route == 'lvnp_admin_text_edit'
-						or route == 'lvnp_admin_texte_delete' %}
-						li-admin-active
-					{% endif %}
-					">
-					TEXTES
-	            </button>
+		<li class="{% if route == 'lbf_admin_newsletterEmails' %} active {% endif %}">
+			<a href="{{ path('lbf_admin_newsletterEmails') }}" class="btn btn-choice">
+				Newsletter emails
+				<div class="float-right inner_arrow">
+					<img src="{{ asset('img/system/defaults/emails.png') }}" alt="" class="btn_right_arrow"/>
+				</div>
 			</a>
 		</li>
-		<li class="nav_admin_li">
-			<a href="{{ path('lvnp_admin_photos') }}" class="no_style_a">
-				<button class="li-admin
-					{% if route == 'lvnp_admin_photos' %}
-						li-admin-active
-					{% endif %}
-					">
-					PHOTOS
-	            </button>
+		<li class="{% if route == 'lbf_admin_elements' %} active {% endif %}">
+			<a href="{{ path('lbf_admin_elements') }}" class="btn btn-choice">
+				Produits
+				<div class="float-right inner_arrow">
+					<img src="{{ asset('img/system/defaults/elements.png') }}" alt="" class="btn_right_arrow"/>
+				</div>
+			</a>
+		</li>
+		<li class="{% if route == 'lbf_admin_recipes' %} active {% endif %}">
+			<a href="{{ path('lbf_admin_recipes') }}" class="btn btn-choice">
+				Recettes
+				<div class="float-right inner_arrow">
+					<img src="{{ asset('img/system/defaults/recipes.png') }}" alt="" class="btn_right_arrow"/>
+				</div>
+			</a>
+		</li>
+		<li class="{% if route == 'fos_user_security_logout' %} active {% endif %} logout-btn">
+			<a href="{{ path('fos_user_security_logout') }}" class="btn btn-choice">
+				Déconnexion
+				<div class="float-right inner_arrow">
+					<img src="{{ asset('img/system/defaults/logout.png') }}" alt="" class="btn_right_arrow"/>
+				</div>
 			</a>
 		</li>
 	</ul>
 </div>
+
+
