--- a/web/css/main_style.css
+++ b/web/css/main_style.css
@@ -691,7 +691,7 @@ strong {
 @media (min-width: 993px) and (max-width: 1400px){
 	#social_media {
 		left: -80.5px;
-		font-size: 1em;
+		font-size: 0.9em;
 	}
 	.social_label {
 		width: 80px;
@@ -827,7 +827,6 @@ strong {
 }
 
 #button_to_top {
-	/*font-size: 1em;*/
 	position: fixed;
 	bottom: 50px;
 	right: 50px;
@@ -842,7 +841,6 @@ strong {
 	text-align: center !important;
 	background-color: rgba(255,185,185,0.8); /*rgba(250,250,250,0.85);*/
 }
-
 .btn-to-top {
 	color: rgba(41,41,41,0.95);
 	margin-left: 10px;
@@ -857,6 +855,66 @@ strong {
 	color: rgba(41,41,41,0.95);
 	border: 1.5px solid rgba(41,41,41,0.95);
 }
+
+#side_buttons {
+	position: fixed;
+	right: 22px;
+	top: 43%;
+	width: 12px;
+	z-index: 10100;
+}
+.btn-side {
+	width: 10px !important;
+	height: 10px !important;
+	border-radius: 5px !important;
+	margin: 4px 0 !important;
+	padding: 0;
+	background-color: transparent;
+	border: 1px solid rgba(41,41,41,0.95);
+}
+.btn-side:hover {
+	border: 1px solid transparent;
+	background-color: rgba(41,41,41,0.7);
+}
+.btn-side-active, .btn-side-active:hover {
+	border: 1px solid transparent;
+	background-color: rgba(41,41,41,0.95);
+}
+.pop_hover_side {
+    position:absolute;
+    margin-top: -10px;
+    margin-left: -110px;
+    width: 100px;
+	text-align: right !important;
+    color: rgba(41,41,41,0.95);
+    background: transparent;
+    padding: 0;
+    border: none;
+    opacity: 0;
+    z-index: 10000;
+}
+.btn-side:hover .pop_hover_side, .btn-side:focus .pop_hover_side {
+	opacity: 1;
+}
+@media (max-width: 1260px) {
+	/* For the white spots in the footer */
+	.btn-side-footer {
+		border: 1px solid white !important;
+	}
+	.btn-side-footer:hover {
+		background-color: rgba(250,250,250,0.7) !important;
+	}
+	.btn-side-footer-active, .btn-side-footer-active:hover {
+		background-color: white !important;
+	}
+}
+@media (max-width: 1400px) {
+	/* For the white writings in the footer */
+	.btn-side-footer .pop_hover_side {
+		color: white !important;
+	}
+}
+
 
 #mobile_nav {
 	z-index: 1000;
@@ -1696,6 +1754,11 @@ body.modal-open {
 
 .border_bottom_white_dotted {
 	border-bottom: 1px dotted rgba(41,41,41,0.5);
+	margin-bottom: 10px;
+}
+.border_top_dotted {
+	border-top: 1px dotted rgba(41,41,41,0.5);	
+	padding-top: 10px;
 }
 
 .remember_me_box {
@@ -1856,6 +1919,9 @@ body.modal-open {
 .nav_tabs_user .active .btn-choice .inner_arrow{
 	opacity: 1;
 }
+.nav_tabs_user .active .btn-choice {
+	background-color: rgba(41,41,41,0.1);
+}
 .logout-btn:hover {
 	background-color: rgba(196,1,1,0.5) !important;
 }
@@ -1880,14 +1946,11 @@ body.modal-open {
     padding: 5px 10px;
     /*border-radius:3px;*/
     border: 5px solid white;
-    transform: scale(0) rotate(-12deg);
-    transition:all .25s;
     opacity:0;
     z-index: 10000;
 }
 .hover_popup:hover span, .hover_popup:focus span {
 	outline:none;
-    transform:scale(1) rotate(0);
     opacity:1;
 }
 
@@ -1958,12 +2021,17 @@ body.modal-open {
 .nav_tabs_admin .active .btn-choice .inner_arrow{
 	opacity: 1;
 }
-.nav_tabs_admin li:hover, .nav_tabs_admin .active {
-	background-color: transparent !important;
-	border-bottom: 1px solid rgba(41,41,41,0.95)
+.nav_tabs_admin li {
+	border-bottom: 1px solid transparent;
 }
-.nav_tabs_admin li a:hover {
+.nav_tabs_admin li:hover, .nav_tabs_admin li:active, .nav_tabs_admin .active {
 	background-color: transparent !important;
+	box-shadow: none;
+	border-bottom: 1px solid rgba(41,41,41,0.95);
+}
+.nav_tabs_admin li a:hover, .nav_tabs_admin li a:focus, .nav_tabs_admin li a:active {
+	background-color: transparent !important;
+	box-shadow: none;
 }
 
 .nav_tabs_admin li.logout-btn:hover {
